1. more fix about collectionview 2.add address link button

--- a/Sex8BlockExtension/Sex8BlockExtension/Base.lproj/Main.storyboard
+++ b/Sex8BlockExtension/Sex8BlockExtension/Base.lproj/Main.storyboard
@@ -683,11 +683,11 @@
             <objects>
                 <viewController id="XfG-lQ-9wD" customClass="ViewController" customModule="Sex8BlockExtension" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="1037" height="629"/>
+                        <rect key="frame" x="0.0" y="0.0" width="655" height="618"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="1Zh-hN-h03">
-                                <rect key="frame" x="535" y="13" width="67" height="32"/>
+                                <rect key="frame" x="182" y="13" width="67" height="32"/>
                                 <buttonCell key="cell" type="push" title="提取" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Reu-8F-DlM">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" size="13" name=".PingFangSC-Regular"/>
@@ -697,7 +697,7 @@
                                 </connections>
                             </button>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="kkJ-ji-QBM">
-                                <rect key="frame" x="435" y="13" width="67" height="32"/>
+                                <rect key="frame" x="94" y="13" width="67" height="32"/>
                                 <buttonCell key="cell" type="push" title="清除" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="lCH-V2-1Sp">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" size="13" name=".PingFangSC-Regular"/>
@@ -707,7 +707,7 @@
                                 </connections>
                             </button>
                             <containerView translatesAutoresizingMaskIntoConstraints="NO" id="s2B-bw-6BZ">
-                                <rect key="frame" x="20" y="71" width="300" height="538"/>
+                                <rect key="frame" x="20" y="71" width="300" height="527"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="300" id="0dN-p6-Jeo"/>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="250" id="rZD-Lb-Djk"/>
@@ -717,7 +717,7 @@
                                 </connections>
                             </containerView>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="4F4-YJ-DqA">
-                                <rect key="frame" x="637" y="13" width="67" height="32"/>
+                                <rect key="frame" x="262" y="13" width="67" height="32"/>
                                 <buttonCell key="cell" type="push" title="删除" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="kjf-o0-3Zk">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" size="13" name=".PingFangSC-Regular"/>
@@ -726,8 +726,34 @@
                                     <action selector="deleteAction:" target="XfG-lQ-9wD" id="z3o-8n-ICQ"/>
                                 </connections>
                             </button>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ISF-Dd-ZBH">
+                                <rect key="frame" x="547" y="13" width="94" height="32"/>
+                                <buttonCell key="cell" type="push" title="下载地址" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="cG8-f7-PIm">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" size="13" name=".PingFangSC-Regular"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="addressShow:" target="XfG-lQ-9wD" id="CaF-Id-1JK"/>
+                                </connections>
+                            </button>
+                            <containerView translatesAutoresizingMaskIntoConstraints="NO" id="ibN-iT-dRO">
+                                <rect key="frame" x="338" y="71" width="297" height="527"/>
+                                <connections>
+                                    <segue destination="cff-Nq-Ge9" kind="embed" id="cWI-QX-PEh"/>
+                                </connections>
+                            </containerView>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="GeB-pL-PSV">
+                                <rect key="frame" x="447" y="13" width="94" height="32"/>
+                                <buttonCell key="cell" type="push" title="页面地址" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="bYT-DG-rF4">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" size="13" name=".PingFangSC-Regular"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="pageURLAction:" target="XfG-lQ-9wD" id="Q57-0h-lkK"/>
+                                </connections>
+                            </button>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="NDp-KK-32D">
-                                <rect key="frame" x="14" y="13" width="94" height="32"/>
+                                <rect key="frame" x="341" y="13" width="94" height="32"/>
                                 <buttonCell key="cell" type="push" title="查看图片" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="1k2-Mo-yPJ">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" size="13" name=".PingFangSC-Regular"/>
@@ -736,39 +762,27 @@
                                     <action selector="showPicture:" target="XfG-lQ-9wD" id="0Km-MG-peX"/>
                                 </connections>
                             </button>
-                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ISF-Dd-ZBH">
-                                <rect key="frame" x="929" y="13" width="94" height="32"/>
-                                <buttonCell key="cell" type="push" title="查看地址" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="cG8-f7-PIm">
-                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                    <font key="font" size="13" name=".PingFangSC-Regular"/>
-                                </buttonCell>
-                            </button>
-                            <containerView translatesAutoresizingMaskIntoConstraints="NO" id="ibN-iT-dRO">
-                                <rect key="frame" x="338" y="71" width="679" height="538"/>
-                                <connections>
-                                    <segue destination="cff-Nq-Ge9" kind="embed" id="cWI-QX-PEh"/>
-                                </connections>
-                            </containerView>
                         </subviews>
                         <constraints>
                             <constraint firstItem="ibN-iT-dRO" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="20" id="0Yn-82-AmG"/>
-                            <constraint firstAttribute="bottom" secondItem="kkJ-ji-QBM" secondAttribute="bottom" constant="20" id="3z3-aY-HuB"/>
-                            <constraint firstItem="kkJ-ji-QBM" firstAttribute="top" secondItem="s2B-bw-6BZ" secondAttribute="bottom" constant="30" id="DJx-fB-FPO"/>
-                            <constraint firstAttribute="trailing" secondItem="ISF-Dd-ZBH" secondAttribute="trailing" constant="20" id="GO3-JJ-cGY"/>
-                            <constraint firstItem="kkJ-ji-QBM" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="NDp-KK-32D" secondAttribute="trailing" constant="134" id="Hm8-Zs-04J"/>
-                            <constraint firstItem="ISF-Dd-ZBH" firstAttribute="centerY" secondItem="4F4-YJ-DqA" secondAttribute="centerY" id="Hqw-oR-klb"/>
+                            <constraint firstItem="GeB-pL-PSV" firstAttribute="leading" secondItem="NDp-KK-32D" secondAttribute="trailing" constant="24" id="0yP-vo-bUm"/>
+                            <constraint firstItem="1Zh-hN-h03" firstAttribute="leading" secondItem="kkJ-ji-QBM" secondAttribute="trailing" constant="33" id="5ll-E9-OwE"/>
+                            <constraint firstItem="1Zh-hN-h03" firstAttribute="centerY" secondItem="4F4-YJ-DqA" secondAttribute="centerY" id="7Mu-vo-ZKc"/>
+                            <constraint firstItem="ISF-Dd-ZBH" firstAttribute="leading" secondItem="GeB-pL-PSV" secondAttribute="trailing" constant="18" id="JBV-ij-N1L"/>
                             <constraint firstItem="ibN-iT-dRO" firstAttribute="height" secondItem="s2B-bw-6BZ" secondAttribute="height" id="KKi-4C-d0d"/>
-                            <constraint firstItem="4F4-YJ-DqA" firstAttribute="centerY" secondItem="1Zh-hN-h03" secondAttribute="centerY" id="NBW-HD-0rQ"/>
-                            <constraint firstItem="1Zh-hN-h03" firstAttribute="centerX" secondItem="m2S-Jp-Qdl" secondAttribute="centerX" constant="50" id="Owz-mQ-MZZ"/>
-                            <constraint firstItem="4F4-YJ-DqA" firstAttribute="leading" secondItem="1Zh-hN-h03" secondAttribute="trailing" constant="47" id="Xz0-dh-x45"/>
-                            <constraint firstItem="NDp-KK-32D" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="20" id="YS1-KS-AhL"/>
-                            <constraint firstItem="ISF-Dd-ZBH" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="4F4-YJ-DqA" secondAttribute="trailing" constant="32" id="fna-8s-9GC"/>
-                            <constraint firstAttribute="bottom" secondItem="1Zh-hN-h03" secondAttribute="bottom" constant="20" id="lEe-z7-xfA"/>
-                            <constraint firstItem="NDp-KK-32D" firstAttribute="centerY" secondItem="kkJ-ji-QBM" secondAttribute="centerY" id="mcQ-OU-R9A"/>
+                            <constraint firstItem="NDp-KK-32D" firstAttribute="leading" secondItem="4F4-YJ-DqA" secondAttribute="trailing" constant="24" id="Mq4-0Y-7oX"/>
+                            <constraint firstItem="4F4-YJ-DqA" firstAttribute="leading" secondItem="1Zh-hN-h03" secondAttribute="trailing" constant="25" id="PgJ-Ic-aiU"/>
+                            <constraint firstAttribute="bottom" secondItem="ISF-Dd-ZBH" secondAttribute="bottom" constant="20" id="VdQ-Hf-jsV"/>
+                            <constraint firstItem="kkJ-ji-QBM" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="100" id="caV-3E-ZBm"/>
+                            <constraint firstItem="NDp-KK-32D" firstAttribute="centerY" secondItem="GeB-pL-PSV" secondAttribute="centerY" id="fTn-Vs-rJv"/>
+                            <constraint firstItem="ISF-Dd-ZBH" firstAttribute="top" secondItem="s2B-bw-6BZ" secondAttribute="bottom" constant="30" id="grU-Ir-cOK"/>
+                            <constraint firstAttribute="trailing" secondItem="ISF-Dd-ZBH" secondAttribute="trailing" constant="20" id="m4N-PB-LGS"/>
+                            <constraint firstItem="kkJ-ji-QBM" firstAttribute="centerY" secondItem="1Zh-hN-h03" secondAttribute="centerY" id="oad-k4-ZRQ"/>
+                            <constraint firstItem="GeB-pL-PSV" firstAttribute="centerY" secondItem="ISF-Dd-ZBH" secondAttribute="centerY" id="qLx-b0-sqY"/>
+                            <constraint firstItem="4F4-YJ-DqA" firstAttribute="centerY" secondItem="NDp-KK-32D" secondAttribute="centerY" id="taJ-UR-3yf"/>
                             <constraint firstItem="s2B-bw-6BZ" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="20" id="tlc-FN-Ryb"/>
                             <constraint firstItem="s2B-bw-6BZ" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="20" id="tmP-ky-84a"/>
                             <constraint firstAttribute="trailing" secondItem="ibN-iT-dRO" secondAttribute="trailing" constant="20" id="tqo-x4-ZBX"/>
-                            <constraint firstItem="kkJ-ji-QBM" firstAttribute="centerX" secondItem="m2S-Jp-Qdl" secondAttribute="centerX" constant="-50" id="w32-Oe-uwm"/>
                             <constraint firstItem="ibN-iT-dRO" firstAttribute="leading" secondItem="s2B-bw-6BZ" secondAttribute="trailing" constant="18" id="zUi-wg-Q7v"/>
                         </constraints>
                     </view>
@@ -777,12 +791,13 @@
                         <outlet property="collectionView" destination="ibN-iT-dRO" id="eVw-z3-6hX"/>
                         <outlet property="extract" destination="1Zh-hN-h03" id="uXZ-2o-I8C"/>
                         <outlet property="images" destination="NDp-KK-32D" id="7we-PN-VAk"/>
+                        <outlet property="pageURL" destination="GeB-pL-PSV" id="LWF-UT-Lra"/>
                         <outlet property="save" destination="kkJ-ji-QBM" id="774-Oe-VlN"/>
                     </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-719.5" y="877.5"/>
+            <point key="canvasLocation" x="-529.5" y="947"/>
         </scene>
         <!--Pics Collection View Controller-->
         <scene sceneID="hB5-wB-rNr">
@@ -801,8 +816,8 @@
                                         <collectionView id="8KL-9S-STe">
                                             <rect key="frame" x="0.0" y="0.0" width="614" height="158"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
-                                            <collectionViewFlowLayout key="collectionViewLayout" minimumInteritemSpacing="10" minimumLineSpacing="10" id="fvj-D7-h7v">
-                                                <size key="itemSize" width="50" height="50"/>
+                                            <collectionViewFlowLayout key="collectionViewLayout" id="fvj-D7-h7v">
+                                                <size key="itemSize" width="10" height="50"/>
                                             </collectionViewFlowLayout>
                                             <color key="primaryBackgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                             <connections>
@@ -909,18 +924,6 @@
                 <userDefaultsController representsSharedInstance="YES" id="6pP-rF-Uk7"/>
             </objects>
             <point key="canvasLocation" x="782" y="775"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="Ghs-zD-zLa">
-            <objects>
-                <viewController id="fiw-5U-ehy" sceneMemberID="viewController">
-                    <view key="view" id="Z5W-aJ-Iyf">
-                        <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </view>
-                </viewController>
-                <customObject id="ydk-dd-1GO" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
-            </objects>
         </scene>
     </scenes>
 </document>
